--- a/modules/users/client/views/profile/profile-edit-about.client.view.html
+++ b/modules/users/client/views/profile/profile-edit-about.client.view.html
@@ -214,7 +214,7 @@
 
         <div class="form-group">
           <label class="col-sm-3 text-right control-label" id="label-languages"
-            >Languages</label
+            >Languages (old)</label
           >
           <div class="col-sm-9 col-md-7 col-lg-6">
             <div
@@ -225,6 +225,10 @@
             <p class="help-block">Add languages you speak.</p>
           </div>
         </div>
+
+        <languages-panel
+          profileLanguages="profileEditAbout.user.languages"
+        ></languages-panel>
       </div>
     </div>
   </div>
